// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/css.macro actual-expected-usage 1`] = `
"/** @jsx jsx */
import jsx from '@emotion/jsx'
import css from '@emotion/css.macro'

const SomeComponent = () => (
  <div
    css={css\`
      color: hotpink;
    \`}
  />
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import jsx from '@emotion/jsx';
var _ref = {
  name: \\"1lrxbo5-SomeComponent\\",
  styles: \\"color:hotpink;\\"
};

const SomeComponent = () => <div css={_ref} />;"
`;

exports[`@emotion/css.macro basic 1`] = `
"import css from '@emotion/css.macro'

function doThing() {
  return css\`
    display: flex;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
var _ref = {
  name: \\"k008qs\\",
  styles: \\"display:flex;\\"
};

function doThing() {
  return _ref;
}"
`;

exports[`@emotion/css.macro call-expression 1`] = `
"import css from '@emotion/css.macro'

function doThing() {
  return css({ color: 'hotpink' })
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
var _ref = {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
};

function doThing() {
  return _ref;
}"
`;

exports[`@emotion/css.macro call-inside-call 1`] = `
"import css from '@emotion/css.macro'

const thing = css\`
  display: flex;
  &:hover {
    \${css\`
      color: hotpink;
    \`};
  }
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

const thing = _css(\\"display:flex;&:hover{\\", {
  name: \\"1lrxbo5-thing\\",
  styles: \\"color:hotpink;\\"
}, \\";}label:thing;\\");"
`;

exports[`@emotion/css.macro comment-with-interpolation 1`] = `
"import css from '@emotion/css.macro'

css\`
  // color: \${'green'};
  /* 
  
  something: \${'something'};
  
  */
  color: hotpink;
\`

css\`
  // color: \${'green'};
  /* 
  
  something: \${'something'};
  
  */
  color: \${'hotpink'};
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/css.macro impure 1`] = `
"import css from '@emotion/css.macro'

function doThing() {
  return css\`
    display: \${thing()};
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

function doThing() {
  return _css(\\"display:\\", thing(), \\";\\");
}"
`;

exports[`@emotion/css.macro inside-class 1`] = `
"/** @jsx jsx */
import { Component } from 'react'
import jsx from '@emotion/jsx'
import css from '@emotion/css.macro'

class SomeComponent extends Component {
  render() {
    return (
      <div
        css={css\`
          color: hotpink;
        \`}
      />
    )
  }
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { Component } from 'react';
import jsx from '@emotion/jsx';
var _ref = {
  name: \\"1lrxbo5-SomeComponent\\",
  styles: \\"color:hotpink;\\"
};

class SomeComponent extends Component {
  render() {
    return <div css={_ref} />;
  }

}"
`;

exports[`@emotion/css.macro label-1 1`] = `
"import css from '@emotion/css.macro'

const thing = css\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  name: \\"1lrxbo5-thing\\",
  styles: \\"color:hotpink;\\"
};"
`;

exports[`@emotion/css.macro label-object 1`] = `
"import css from '@emotion/css.macro'

const thing = {
  thisShouldBeTheLabel: css\`
    color: hotpink;
  \`,
  // prettier-ignore
  'shouldBeAnotherLabel':css\`
    color:green;
  \`
}


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  thisShouldBeTheLabel: {
    name: \\"1lrxbo5-thisShouldBeTheLabel\\",
    styles: \\"color:hotpink;\\"
  },
  // prettier-ignore
  'shouldBeAnotherLabel': {
    name: \\"bjcoli-shouldBeAnotherLabel\\",
    styles: \\"color:green;\\"
  }
};"
`;

exports[`@emotion/css.macro multiple-calls 1`] = `
"import css from '@emotion/css.macro'

const thing = css\`
  color: hotpink;
\`

const otherThing = css\`
  color: green;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
const thing = {
  name: \\"1lrxbo5-thing\\",
  styles: \\"color:hotpink;\\"
};
const otherThing = {
  name: \\"bjcoli-otherThing\\",
  styles: \\"color:green;\\"
};"
`;

exports[`@emotion/css.macro remove-block-comments 1`] = `
"import css from '@emotion/css.macro'

css\`
  /* color:green;
ddjfwjkng
  */
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;

exports[`@emotion/css.macro remove-line-comments 1`] = `
"import css from '@emotion/css.macro'

css\`
  // color: green;
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";
({
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
});"
`;
